# S4BXI

./: .clang-format  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  format_all.sh  rebuild.sh  s4bxi_env.sh  s4bximain.1.md  sonar-project.properties  test.sh
.github/workflows/: build.yml
docs/: Doxyfile  Doxyfile-mcss  build.sh
docs/pages/: cpu-model.md  high-level-APIs.md  home.md  installation.md  network-model.md  usage.md
examples/: CMakeLists.txt  deploy.xml  hello.cpp  platform.xml  run.sh
include/: portals4.h  portals4_bxiext.h  portals4_services.h
include/s4bxi/: BxiEngine.hpp  BxiLog.hpp  BxiNode.hpp  BxiQueue.hpp  s4bxi.hpp  s4bxi_bench.h  s4bxi_bench.hpp  s4bxi_c_util.h  s4bxi_config.hpp  s4bxi_mailbox_pool.hpp  s4bxi_mpi_comm.hpp  s4bxi_mpi_middleware.h  s4bxi_redefine.h  s4bxi_sample.h  s4bxi_shared.h  s4bxi_util.hpp  s4bxi_xbt_log.h  s4ptl.hpp
include/s4bxi/actors/: BxiActor.hpp  BxiMainActor.hpp  BxiNicActor.hpp  BxiNicE2E.hpp  BxiNicInitiator.hpp  BxiNicTarget.hpp  BxiUserAppActor.hpp
include/s4bxi/mpi_middleware/: BxiMpiComm.hpp  BxiMpiDatatype.hpp  BxiMpiRequest.hpp  s4bxi_mpi_middleware.h  s4bxi_mpi_ops.h
include/s4bxi/plugins/: BxiActorExt.hpp
src/: BxiEngine.cpp  BxiNode.cpp  BxiQueue.cpp  portals4.cpp  privatization_main.cpp  ptl_str.cpp  s4bxi_bench.cpp  s4bxi_c_util.cpp  s4bxi_mailbox_pool.cpp  s4bxi_mpi_middleware.cpp  s4bxi_redefine.cpp  s4bxi_sample.cpp  s4bxi_shared.cpp  s4bxi_util.cpp
src/actors/: BxiActor.cpp  BxiMainActor.cpp  BxiNicActor.cpp  BxiNicE2E.cpp  BxiNicInitiator.cpp  BxiNicTarget.cpp  BxiUserAppActor.cpp
src/mpi_middleware/: BxiMpiComm.cpp  BxiMpiDatatype.cpp  s4bxi_mpi_middleware.cpp
src/plugins/: BxiActorExt.cpp
src/s4ptl/: BxiCT.cpp  BxiEQ.cpp  BxiMD.cpp  BxiME.cpp  BxiMsg.cpp  BxiNI.cpp  BxiPT.cpp  BxiRequest.cpp
src/scripts/: s4bxicc.in  s4bxicxx.in
teshsuite/: CMakeLists.txt  README.md  clean.sh  run.sh
teshsuite/_pt2pt_atomic/: pt2pt_atomic.cpp  pt2pt_atomic.tesh
teshsuite/_pt2pt_auto_unlink/: pt2pt_auto_unlink.cpp  pt2pt_auto_unlink.tesh
teshsuite/_pt2pt_counters/: pt2pt_counters.cpp  pt2pt_counters.tesh
teshsuite/_pt2pt_fetch_atomic/: pt2pt_fetch_atomic.cpp  pt2pt_fetch_atomic.tesh
teshsuite/_pt2pt_get_matching/: pt2pt_get_matching.cpp  pt2pt_get_matching.tesh
teshsuite/_pt2pt_get_non_matching/: pt2pt_get_non_matching.cpp  pt2pt_get_non_matching.tesh
teshsuite/_pt2pt_l2p/: pt2pt_l2p.cpp  pt2pt_l2p.tesh
teshsuite/_pt2pt_offsets/: pt2pt_offsets.cpp  pt2pt_offsets.tesh
teshsuite/_pt2pt_put_matching/: pt2pt_put_matching.cpp  pt2pt_put_matching.tesh
teshsuite/_pt2pt_put_non_matching/: pt2pt_put_non_matching.cpp  pt2pt_put_non_matching.tesh
teshsuite/_pt2pt_truncated_payload/: pt2pt_truncated_payload.cpp  pt2pt_truncated_payload.tesh
teshsuite/_pt2pt_unexpected_headers/: pt2pt_unexpected_headers.cpp  pt2pt_unexpected_headers.tesh
teshsuite/deploys/: quito_client_server_fake_memory.xml  quito_client_server_real_memory.xml  quito_fake_memory.xml  quito_real_memory.xml  vix_client_server_fake_memory.xml  vix_client_server_no_e2e.xml  vix_client_server_real_memory.xml  vix_fake_memory.xml  vix_optimized.xml  vix_real_memory.xml
